--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "poets",
   "version": "0.1.0",
   "private": true,
+"homepage":"https://voytforblr.github.io/poets/",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^5.12.0",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
